// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Handles default locale correctly 1`] = `
<div
  data-testid="gatsby-link"
  to="/"
>
  test
</div>
`;

exports[`Locale passed as prop overrides default locale 1`] = `
<div
  data-testid="gatsby-link"
  to="/es/"
>
  test
</div>
`;

exports[`Renders correctly 1`] = `
<div
  data-testid="gatsby-link"
  to="/it/"
>
  test
</div>
`;
